add mobile responsive

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 					type="text"
 					name="Name:"
 					placeholder="Name or Company Name"
-					oninvalid="this.setCustomValidity('Please enter name or company name')"
+					oninvalid="this.setCustomValidity('Please enter ur name or company name')"
 					oninput="this.setCustomValidity('')"
 					required
 				/>
