--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		</section>
 
 		<section class="home">
-			<h1 class="title">Md Abdul <br />Malik</h1>
+			<h1 class="title">Md Abdul <br />Malik1</h1>
 			<p><span></span>UI/UX Design</p>
 			<p><span></span>Front-End Development</p>
 			<p><span></span>Back-End Development</p>
