--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<p><span></span>Full-Stack Development</p>
 			<p><span></span>Mern-Stack Development</p>
 			<div>
-				<span><a href="./img/resume" download>Download Cv</a></span>
+				<span><a href="./img/malik_resume.pdf" download>Download Cv</a></span>
 				<span onclick="scrollToSection('.contact')" class="hireme"
 					>Hire me</span
 				>
