--- a/index.html
+++ b/index.html
@@ -250,6 +250,11 @@
 							<span class="education-title">EDUCATION</span>
 							<fieldset>
 								<legend></legend>
+								<h3>Mern-Stack  2024</h3>
+								<span>Youtube and Internet Sources</span>
+							</fieldset>
+							<fieldset>
+								<legend></legend>
 								<h3>Graduation, Political Science Hons 2022</h3>
 								<span>MB College, Palace Compound, Imphal</span>
 							</fieldset>
