--- a/index.html
+++ b/index.html
@@ -71,163 +71,81 @@
 				and Express Js.
 			</p>
 			<div class="project-card">
-				<h3 class="projectCard-title">5 Landing pages</h3>
-				<span class="projectCard-desc">| Html5 | Css3 | Js |</span>
+				<h3 class="projectCard-title">Fake Rest Api</h3>
+				<span class="projectCard-desc">| Express | Mongoose |</span>
 				<ul class="project-features">
-					<li><span class="doubleCheck"></span><span>responsiveness</span></li>
-					<li><span class="doubleCheck"></span><span>animation</span></li>
+					<li><span class="doubleCheck"></span><span>Get data</span></li>
+					<li><span class="doubleCheck"></span><span>Post data</span></li>
 					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
+						<span class="doubleCheck"></span><span>Patch data</span>
 					</li>
 					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
+						<span class="doubleCheck"></span><span>Delete data</span>
 					</li>
 					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
+						<span class="doubleCheck"></span><span>100% Free</span>
 					</li>
 				</ul>
 				<p class="project-link-container">
-					<a href="/"
+					<a href="https://tinyapihub-production.up.railway.app/"
+						 target="_blank"><span class="link-desc">Let`s go fot it</span>
+						<span class="link-icon"></span
+					></a>
+				</p>
+			</div>
+			<div class="project-card">
+				<h3 class="projectCard-title">Calculator</h3>
+				<span class="projectCard-desc">| React js | Css3 |</span>
+				<ul class="project-features">
+					<li>
+						<span class="doubleCheck"></span><span>Dynamic Interface</span>
+					</li>
+					<li>
+						<span class="doubleCheck"></span><span>State Management</span>
+					</li>
+					<li>
+						<span class="doubleCheck"></span><span>Event Handeling</span>
+					</li>
+					<li>
+						<span class="doubleCheck"></span><span>Maths Operations</span>
+					</li>
+					<li>
+						<span class="doubleCheck"></span><span>Error Handeling</span>
+					</li>
+				</ul>
+				<p class="project-link-container">
+					<a href="https://calculator-production-29e7.up.railway.app/" target="_blank"
 						><span class="link-desc">Let`s go fot it</span>
 						<span class="link-icon"></span
 					></a>
 				</p>
 			</div>
 			<div class="project-card">
-				<h3 class="projectCard-title">two</h3>
-				<span class="projectCard-desc">| Html5 | Css3 | Js |</span>
+				<h3 class="projectCard-title"> Task Setter</h3>
+				<span class="projectCard-desc">| React Js | Redux Toolkit | <br> | Express Js | Mongoose |</span>
 				<ul class="project-features">
 					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
+						<span class="doubleCheck"></span><span>Full-Stack Project</span>
 					</li>
 					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
+						<span class="doubleCheck"></span><span>Auth & Authorization</span>
 					</li>
 					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
+						<span class="doubleCheck"></span><span>Real-Time Data</span>
 					</li>
 					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
+						<span class="doubleCheck"></span><span>Error Handeling</span>
 					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
+					
 				</ul>
 				<p class="project-link-container">
-					<a href="/"
+					<a href="https://mern-production-dee9.up.railway.app/login" target="_blank"
 						><span class="link-desc">Let`s go fot it</span>
 						<span class="link-icon"></span
 					></a>
 				</p>
 			</div>
-			<div class="project-card">
-				<h3 class="projectCard-title">one</h3>
-				<span class="projectCard-desc">| Html5 | Css3 | Js |</span>
-				<ul class="project-features">
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-				</ul>
-				<p class="project-link-container">
-					<a href="/"
-						><span class="link-desc">Let`s go fot it</span>
-						<span class="link-icon"></span
-					></a>
-				</p>
-			</div>
-			<div class="project-card">
-				<h3 class="projectCard-title">asdf</h3>
-				<span class="projectCard-desc">| Html5 | Css3 | Js |</span>
-				<ul class="project-features">
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-				</ul>
-				<p class="project-link-container">
-					<a href="/"
-						><span class="link-desc">Let`s go fot it</span>
-						<span class="link-icon"></span
-					></a>
-				</p>
-			</div>
-			<div class="project-card">
-				<h3 class="projectCard-title">Hased</h3>
-				<span class="projectCard-desc">| Html5 | Css3 | Js |</span>
-				<ul class="project-features">
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-				</ul>
-				<p class="project-link-container">
-					<a href="/"
-						><span class="link-desc">Let`s go fot it</span>
-						<span class="link-icon"></span
-					></a>
-				</p>
-			</div>
-			<div class="project-card">
-				<h3 class="projectCard-title">yjtj</h3>
-				<span class="projectCard-desc">| Html5 | Css3 | Js |</span>
-				<ul class="project-features">
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-					<li>
-						<span class="doubleCheck"></span><span>auth and authorization</span>
-					</li>
-				</ul>
-				<p class="project-link-container">
-					<a href="/"
-						><span class="link-desc">Let`s go fot it</span>
-						<span class="link-icon"></span
-					></a>
-				</p>
-			</div>
+	
 		</section>
 		<section class="about">
 			<div class="about-desc">
